# chat-app-sally

./: pyproject.toml
ChatServerPlayground/: routing.py  settings.py  urls.py
account/: admin.py  forms.py  models.py  utils.py  views.py
account/migrations/: 0001_initial.py
account/templates/account/: account.html  edit_account.html  search_results.html
chat/: admin.py  consumers.py  utils.py
chat/migrations/: 0001_initial.py
chat/templates/chat/: room.html
friend/: models.py  views.py
friend/migrations/: 0001_initial.py
friend/templates/friend/snippets/: cancel_friend_request.html
notification/: admin.py  consumers.py  utils.py
notification/migrations/: 0001_initial.py
personal/: views.py
personal/templates/personal/: home.html
public_chat/: admin.py  consumers.py  models.py
public_chat/migrations/: 0001_initial.py  0002_auto_20210202_1833.py
public_chat/templates/public_chat/snippets/: public_chat_room.html
templates/: base.html
templates/snippets/: base_js.html  header.html
