[tool.poetry]
name = "chat-app-sally"
version = "0.1.0"
description = ""
authors = ["sallytareq <sally.ammous@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "2.2.15"
psycopg2 = "^2.8.6"
requests = "^2.25.1"
channels = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
